# Limits_droper

./: .gitignore  README.md
.github/workflows/: release.yml
helper/: com.limits_droper.helper.policy  limits_helper.c
qt_ui/: CMakeLists.txt  main.cpp
